--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
       <div align="center">
 <img src=https://imgoldjii.oss-cn-beijing.aliyuncs.com/sdsm.png width=600 />
 </div>
-<p><em>Form Weird Wonderful Ai Art - <a href="https://weirdwonderfulai.art/resources/disco-diffusion-70-plus-artist-studies/">https://weirdwonderfulai.art/resources/disco-diffusion-70-plus-artist-studies/</a></em></p>
+*Form Weird Wonderful Ai Art - https://weirdwonderfulai.art/resources/disco-diffusion-70-plus-artist-studies/*
     </div>
     <div class="read-more">
       <a href="/post/stable_diffusion/" class="read-more-link">Read more...</a>
